[package]
name = "solana-sbf-rust-sha"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
blake3 = { workspace = true, features = ["std", "traits-preview"] }
solana-program = { workspace = true }

[lib]
crate-type = ["cdylib"]
